--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -1,26 +1,129 @@
-set ignorecase 
-set smartcase
-set wrapscan
-set hlsearch
+" --- Core Vim Settings ---
+set clipboard+=unnamedplus      " Sync with system clipboard
+set number                      " Line numbers
+set scrolloff=8                 " Keep 8 lines above/below cursor
+set sidescrolloff=8             " Keep 8 columns left/right
+set ignorecase                  " Case insensitive search
+set smartcase                   " Case sensitive if capital used
+set incsearch                   " Incremental search
+set hlsearch                    " Highlight search results
+set showmode                    " Show current mode
+set surround                    " Enable surround plugin (ys/cs/ds)
+set multiple-cursors            " Enable multiple cursors (optional)
+set commentary                  " Enable commentary (gcc/gc)
+set sneak                       " Enable sneak (s/S) for 2-char jump
+set which-key                   " Show key-chord popup
+set notimeout                   " Wait indefinitely for leader keys
 
-" Use hybrid relative linenumbers
-set number relativenumber
-set nu rnu
+" --- Leader Key ---
+let mapleader = " "
 
-" Use the system clipboard
-set clipboard+=unnamed
+" --- Visual bell instead of audible MacOS alert ---
+set visualbell
+set noerrorbells
 
-nnoremap ; :
+" =============================================================================
+"  WINDOW NAVIGATION (LazyVim Style)
+" =============================================================================
+" Move between splits using Ctrl + h/j/k/l
+nnoremap <C-h> <C-w>h
+nnoremap <C-j> <C-w>j
+nnoremap <C-k> <C-w>k
+nnoremap <C-l> <C-w>l
 
+" Window Management
+nnoremap <leader>wd :action CloseContent<CR>        " Close current window
+nnoremap <leader>w- :action SplitHorizontally<CR>   " Split Horizontal
+nnoremap <leader>w\| :action SplitVertically<CR>    " Split Vertical
+nnoremap <leader>bo :action CloseAllEditorsButActive<CR> " Close other tabs
+
+" =============================================================================
+"  BUFFER NAVIGATION
+" =============================================================================
+" Shift + h/l to cycle buffers (tabs)
+nnoremap <S-h> :action PreviousEditorTab<CR>
+nnoremap <S-l> :action NextEditorTab<CR>
+nnoremap <leader>bb :action RecentFiles<CR>         " Switch buffer (Recent files)
+nnoremap <leader>bd :action CloseContent<CR>        " Delete buffer
+
+" =============================================================================
+"  FILE EXPLORER (NeoTree equivalent)
+" =============================================================================
+" Toggle the Project View
+nnoremap <leader>e :action ActivateProjectToolWindow<CR>
+
+" =============================================================================
+"  SEARCH / TELESCOPE MAPPINGS
+" =============================================================================
+" File Search
+nnoremap <leader>ff :action GotoFile<CR>            " Find Files
+nnoremap <leader>fr :action RecentFiles<CR>         " Recent Files
+
+" Text Search
+nnoremap <leader>sg :action FindInPath<CR>          " Grep (Find in Path)
+nnoremap <leader>/  :action FindInPath<CR>          " Grep shortcut
+nnoremap <leader>sw :action FindWordAtCaret<CR>     " Search word under cursor
+
+" General
+nnoremap <leader><space> :action SearchEverywhere<CR> " Search Everything (Commands/Files)
+
+" =============================================================================
+"  LSP / CODING (LSP equivalent)
+" =============================================================================
+" Navigation
 nnoremap gd :action GotoDeclaration<CR>
+nnoremap gr :action FindUsages<CR>
+nnoremap gy :action GotoTypeDeclaration<CR>
 nnoremap gi :action GotoImplementation<CR>
-nnoremap gb :action Back<CR>
 
-nnoremap U :action FindUsages<CR>
-nnoremap R :action RenameElement<CR>
-nnoremap cc :action CommentByLineComment<CR>
+" Actions
+nnoremap K :action QuickJavaDoc<CR>                 " Hover documentation
+nnoremap <leader>cr :action RenameElement<CR>
+earch Everything (Commands/Files)
 
-nnoremap ,t :action TsLintFileFixAction<CR>>
+" Diagnostics (Trouble.nvim equivalent)
+nnoremap <leader>xx :action ActivateProblemsViewToolWindow<CR>
+nnoremap [d :action GotoPreviousError<CR>
+nnoremap ]d :action GotoNextError<CR>
 
-" Reload .ideavimrc
-nmap <leader>R :source ~/.ideavimrc<CR>
+" Formatting
+nnoremap <leader>cf :action ReformatCode<CR>
+
+" =============================================================================
+"  GIT (LazyGit equivalent)
+" =============================================================================
+nnoremap <leader>gg :action Vcs.QuickListPopupAction<CR>
+nnoremap <leader>gb :action Git.Branches<CR>
+
+" =============================================================================
+"  TERMINAL
+" =============================================================================
+nnoremap <leader>ft :action ActivateTerminalToolWindow<CR>
+nnoremap <C-/> :action ActivateTerminalToolWindow<CR> " Ctrl+/ to toggle terminal
+
+" =============================================================================
+"  WINDOW MANAGEMENT HELPER
+" =============================================================================
+" If you get stuck in a tool window, this is the universal "Close Active Tool Window"
+" (Equivalent to Shift+Esc in standard IntelliJ)
+nnoremap <leader>q :action HideActiveWindow<CR>
+
+" =============================================================================
+"  QOL & FIXES
+" =============================================================================
+" Better indentation logic
+vnoremap < <gv
+vnoremap > >gv
+
+" Escape mapping
+inoremap jj <Esc>
+inoremap jk <Esc>
+
+" Clear search highlighting with Esc
+nnoremap <Esc> :nohlsearch<CR>
+
+" =========================
+" Method navigation
+" =========================
+nnoremap [[ :action MethodUp<CR>
+nnoremap ]] :action MethodDown<CR>
