--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -1,7 +1,3 @@
-" =============================================================================
-"  LAZYVIM-INSPIRED IDEAVIM CONFIG
-" =============================================================================
-
 " --- Core Vim Settings ---
 set clipboard+=unnamedplus
 set number
@@ -36,17 +32,20 @@ nnoremap <C-k> <C-w>k
 nnoremap <C-l> <C-w>l
 
 " Window Management
-nnoremap <leader>wd :action CloseContent<CR>        " Close current window
-nnoremap <leader>w- :action SplitHorizontally<CR>   " Split Horizontal
-nnoremap <leader>w\| :action SplitVertically<CR>    " Split Vertical
-nnoremap <leader>bo :action CloseAllEditorsButActive<CR> " Close other tabs
+nnoremap <leader>wd :action CloseContent<CR>
+nnoremap <leader>w- :action SplitHorizontally<CR>
+nnoremap <leader>h :action SplitHorizontally<CR>
+nnoremap <leader>w\| :action SplitVertically<CR>
+nnoremap <leader>v :action SplitVertically<CR>
+nnoremap <leader>bo :action CloseAllEditorsButActive<CR>
+
 
 " =============================================================================
 "  BUFFER NAVIGATION
 " =============================================================================
 nnoremap { :action PreviousTab<CR>
 nnoremap } :action NextTab<CR>
-nnoremap <leader>bb :action RecentFiles<CR>         " Switch buffer (Recent files)
+nnoremap <leader>bb :action RecentFiles<CR>
 nnoremap <leader>bd :action CloseContent<CR>        " Delete buffer
 
 " =============================================================================
@@ -59,16 +58,16 @@ nnoremap <leader>e :action ActivateProjectToolWindow<CR>
 "  SEARCH / TELESCOPE MAPPINGS
 " =============================================================================
 " File Search
-nnoremap <leader>ff :action GotoFile<CR>            " Find Files
-nnoremap <leader>fr :action RecentFiles<CR>         " Recent Files
+nnoremap <leader>ff :action GotoFile<CR>
+nnoremap <leader>fr :action RecentFiles<CR>
 
 " Text Search
-nnoremap <leader>sg :action FindInPath<CR>          " Grep (Find in Path)
-nnoremap <leader>/  :action FindInPath<CR>          " Grep shortcut
-nnoremap <leader>sw :action FindWordAtCaret<CR>     " Search word under cursor
+nnoremap <leader>sg :action FindInPath<CR>
+nnoremap <leader>/  :action FindInPath<CR>
+nnoremap <leader>sw :action FindWordAtCaret<CR>
 
 " General
-nnoremap <leader><space> :action SearchEverywhere<CR> " Search Everything (Commands/Files)
+nnoremap <leader><space> :action SearchEverywhere<CR>
 
 " =============================================================================
 "  LSP / CODING (LSP equivalent)
@@ -80,7 +79,7 @@ nnoremap gy :action GotoTypeDeclaration<CR>
 nnoremap gi :action GotoImplementation<CR>
 
 " Actions
-nnoremap K :action QuickJavaDoc<CR>                 " Hover documentation
+nnoremap K :action QuickJavaDoc<CR>
 nnoremap <leader>cr :action RenameElement<CR>
 
 " Diagnostics (Trouble.nvim equivalent)
